# tut

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: fmt.cmake
include/tut/: log.cpp  log.h  log_common.cpp  log_common.h  log_formatter.cpp  log_formatter.h  log_msg.cpp  log_msg.h  singleton.h  sink.cpp  sink.h  util.cpp  util.h
